moved index.html

--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
     <title>Quadrilation</title>
 
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="src/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.4/css/bulma.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma-extensions@4.0.0/dist/css/bulma-extensions.min.css">
     <script> var exports = {}; </script>
-    <script src="typescript/script.js"></script>
+    <script src="src/typescript/script.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bulma-calendar@5.0.3/dist/js/bulma-calendar.min.js"></script>
 </head>
 <body>
@@ -44,7 +44,7 @@
 </div>
 
 <section class="section has-background-grey-lighter">
-        <img id="transformedImage" src="../res/img/arrow_up.png" alt="transformed image">
+        <img id="transformedImage" src="res/img/arrow_up.png" alt="transformed image">
 </section>
 </body>
 </html>
